--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name": "drefined/php-zipkin",
+  "name": "sparefoot/php-zipkin",
   "type": "library",
   "description": "Zipkin's PHP tracer library",
   "keywords": ["zipkin", "php", "tracing", "tracer"],
-  "homepage": "https://github.com/drefined/php-zipkin",
+  "homepage": "https://github.com/sparefootrm/php-zipkin",
   "license": "MIT",
   "authors": [
     {
@@ -18,11 +18,10 @@
   },
   "minimum-stability": "dev",
   "require": {
-    "php": "^7.0",
+    "php": "^5.6.4",
     "guzzlehttp/guzzle": "^6.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7.0",
-    "laravel/framework": "5.3.*"
+    "phpunit/phpunit": "^5.7.0"
   }
 }
